2012-07-05 20:31  paddockd

	* [r360] ChangeLog, contrib/makefile.sol-gcc-sparc-display,
	  lib/portmixer/px_solaris, lib/portmixer/px_solaris/px_solaris.c,
	  makefile.sol10-intel-display, makefile.sol10-sparc64-display,
	  makefile.sol9-sparc-display, src/slimaudio/slimaudio_output.c,
	  src/squeezeslave/squeezeslave.c: Added solaris portmixer support
	  from kiax 0.8.51.
	  Increased revision to 360.

2012-07-03 21:33  paddockd

	* [r359] ChangeLog, src/slimaudio/slimaudio_output.c,
	  src/squeezeslave/squeezeslave.c: Added stream active check to
	  output PAUSE case for portaudio v18.
	  Increased revision to 359.

2012-07-03 21:29  paddockd

	* [r358] ChangeLog, lib/portaudio/pa_unix_oss/pa_unix_solaris.c,
	  src/squeezeslave/squeezeslave.c: Pause and flush only required
	  when changing record parameters in Solaris.
	  Increased revision to 358.

2012-07-02 18:43  paddockd

	* [r357] ChangeLog, lib/portaudio/pa_unix_oss/pa_unix.c,
	  src/squeezeslave/squeezeslave.c: Applied Linux Duplex bug fix
	  from Alan Horstmann 4.6.07 to portaudio v18.
	  Increased revision to 357.

2012-06-21 16:45  paddockd

	* [r356] src/slimaudio/slimaudio.c,
	  src/slimaudio/slimaudio_output.c,
	  src/squeezeslave/squeezeslave.c: Added stream active check to
	  output STOP case for portaudio v18.
	  Increased revision to 356.

2012-06-20 21:18  paddockd

	* [r355] ChangeLog, TODO, src/slimaudio/slimaudio.h,
	  src/slimaudio/slimaudio_output.c,
	  src/squeezeslave/squeezeslave.c: Added a timeout to the new
	  buffering loop.
	  Increased revision to 355.

2012-06-20 17:52  paddockd

	* [r354] ChangeLog, src/slimaudio/slimaudio_decoder_vorbis.c,
	  src/squeezeslave/squeezeslave.c: Removed TREMOR_DECODER
	  restriction for big endian systems.
	  Increased revision to 354.

2012-06-20 00:02  paddockd

	* [r353] ChangeLog, contrib/makefile.sol-gcc-sparc-display,
	  makefile.sol10-intel-display, makefile.sol10-sparc64-display,